# up_pqied

./: .gitignore  CMakeLists.txt  License.txt  config.h.in  up_pqied.h  up_pqied.prj
0.doc/: ChangeLog.txt  Manual.md  Manual.xml  up_pqied 操作说明.txt
lua/: lua2lc.sh  preprocess.lua
release/: update.cfg  upqnet.bat
release/.sys/: cst61850.lst  force_up.lst  gui_lang  rm_up_tmp.bat  vendors.lst
release/.sys/script/: getver.scr  init.scr  type_map.lst
release/.sys/script/01/: reboot.scr
release/.sys/script/11/: c_update.scr  d_post.scr
release/.sys/script/13/: d_post.scr
release/.sys/script/14/: d_post.scr
release/.sys/script/15/: d_post.lua  d_post.scr
release/.sys/script/21/: b_upload.scr  c_update.scr
release/.sys/script/22/: a_pre.scr  b_upload.scr  c_update.scr  d_post.scr
release/.sys/script/23/: a_post.lua  b_upload.scr  c_update.scr  reset_syscfg.sh
release/.sys/script/24/: c_update.scr
release/.sys/script/27/: a_pre.scr  b_upload.scr  c_update.scr  d_post.scr
release/.sys/script/28/: b_upload.scr
release/.sys/script/31/: c_update.scr
release/.sys/script/32/: a_pre.scr  c_update.scr
release/.sys/script/33/: c_update.scr
release/.sys/script/36/: c_update.scr
release/.sys/script/37/: c_update.scr  d_post.scr
release/.sys/script/39/: c_update.scr
release/.sys/script/40/: c_update.scr
release/.sys/script/50/: b_upload.scr  c_update.scr
release/.sys/script/70/: c_update.scr
release/.sys/script/71/: b_upload.scr
release/.sys/script/72/: b_upload.scr
release/.sys/script/73/: c_update.scr  d_post.scr
release/scnet_cfg/: 0-0-1.cfg
release/upfile/: update_desc_200605.txt  update_desc_200605B.txt  update_desc_200918.txt  update_desc_201228.txt  update_desc_201229.txt
release/upfile/gui/: dpqnet_gui_cn  dpqnet_gui_en  lang.lst
release/upfile/scnet_kit/: scnettool
release/upfile/scnet_kit/tftpd32/: 0-0-1.cfg  tftpd32.ini
release/upfile/script/: create_md5.bat  mkfs4sd.sh  reboot.sh  update.sh
scan_upsys/: CMakeLists.txt  scan_upsys.cpp
src/: CMakeLists.txt  main.cpp  ssh_api.cpp  ssh_api.h
src/lua_api/: lua_api.cpp  lua_api.h
